at https://oodt.jpl.nasa.gov/jira/browse/CA.


1.1.6 — TBD
-----------

This release includes:

* CA-971 - Sponsoring site is non-optional, must be optional
* CA-1029 - Sites cannot be displayed if the have outside PIs
* CA-1037 - Karen Andrerson not listed as PI of Dana Farber
* CA-1049 - Allow duplicate people at different sites


1.1.5 — Upgrades
----------------

Made compatible with Plone 4.1.5 and eea.facetednavigation 4.5


1.1.4 — Test Support
--------------------

This release includes:

* Depending on just Plone the framework instead of Plone the application.
 

1.1.3 — Flip-Flop
-----------------

First they want it reversed, now they don't:

* CA-789 - On the members list, under the site Type box, sort them
  alphabetically


1.1.2 — Dependency Cleanup
--------------------------

This release drops the dependency on the P4A_ "subtyper" mechanism, as the
EEA_ `faceted navigation`_ mechanism no longer needs it.


1.1.1 — Upgrade Cleanup
-----------------------

This release updates the GenericSetup profile to 4, provides upgrade steps to
that profile, and makes the testing and development harness depend on "trunk"
level of other eggs instead of on released versions of those eggs.  Also, it
removes in incompatible profile dependency.


1.1.0 — Plone 4
---------------

This release makes eke.site compatible with Plone 4.


1.0.4 — Context Sensitive People
--------------------------------

The two issues addressed in this release are:

* CA-725 - Vocabularies eke.site.People and eke.site.PeopleWithNoReference are
  context-dependent
* CA-728 - Remove "Other Misc.  Sites" category from Sites and show each
  category in list at top of page


1.0.3 — Organsmic Organ Sites
-----------------------------

* CA-680 - Change Clinical Validation Center to Clinical Validation Centers
  (plural)
* CA-691 - Allow BDLs to have multiple organ sites
* CA-693 - Members List - Collapse all Associate Members Bs and Cs into single
  B and C groups