@@ -17,9 +17,3 @@ eggs = ${buildout:package-name}[test]
 [mkrelease]
 recipe = zc.recipe.egg:scripts
 eggs = jarn.mkrelease
-
-[versions]
-# Work around a bug in Plone 4.1.5
-Products.TinyMCE = 1.2.12
-zc.recipe.egg = 1.3.2
-zc.buildout = 1.5.2
